# a-stock-signal-monitor

./: .gitignore  README.md  pyproject.toml
common/: StockEnum.py  log_utils.py
etf_monitor/: eastmoney_crawler.py  etf_monitor_scheduler.py  gui_utils.py  ma_monitor.py  realtime_monitor.py  watchlist.py
infrastructure/: __init__.py  logging.py
market_data/: __init__.py  config.py  database.py  error_classifier.py  exceptions.py  interfaces.py  periods.py  service.py  trading_calendar.py
market_data/providers/: __init__.py  baostock_provider.py  eastmoney_provider.py  sge_provider.py  sina_provider.py  tencent_provider.py  tushare_provider.py  yahoo_provider.py
resource/: local_secrets.example.json
stock_signal_monitor/: __init__.py  refresh_etf_list.py  refresh_stock_list.py  scan_market.py  stock_status.py  stock_strategy.py
tests/: __init__.py  test_index_service.py  test_market_data.py  test_periods.py  test_realtime_monitor.py  test_sge_provider.py  test_sina_provider.py  test_strategy.py  test_tencent_provider.py  test_trading_calendar.py  test_tushare_provider.py  test_web_app.py  test_yahoo_provider.py
web_app/: __init__.py  __main__.py  app.py  index_service.py  tasks.py
web_app/static/css/: app.css
web_app/static/js/: app.js
web_app/templates/: index.html
